--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -129,10 +129,9 @@
             </intent-filter>
         </receiver>
         <receiver android:name=".relay.RelaySyncAlarm" />
-        <receiver android:name=".service.SyncAlarmReceiver" />
+        <receiver android:name=".relay.HotlistSyncAlarm" />
         <receiver android:name=".relay.Hotlist$InlineReplyReceiver" />
         <receiver android:name=".service.Notificator$NotificationDismissedReceiver" />
-        <receiver android:name=".upload.CancelAllUploadsReceiver" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
