refactor Sync: add BroadcastCompanion

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,7 +128,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
-        <receiver android:name=".relay.RelaySyncAlarm" />
+        <receiver android:name=".relay.BufferSyncAlarm" />
         <receiver android:name=".relay.HotlistSyncAlarm" />
         <receiver android:name=".relay.Hotlist$InlineReplyReceiver" />
         <receiver android:name=".service.Notificator$NotificationDismissedReceiver" />
