--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -130,6 +130,7 @@
         </receiver>
         <receiver android:name=".relay.BufferSyncAlarm" />
         <receiver android:name=".relay.HotlistSyncAlarm" />
+        <receiver android:name=".relay.PingAlarm" />
         <receiver android:name=".relay.Hotlist$InlineReplyReceiver" />
         <receiver android:name=".service.Notificator$NotificationDismissedReceiver" />
 
